src/test/deca/context/valid/method_asm_body.deca
// Description:
//    Test d'un method_body_asm
//
// Résultats:
//    ok
//
// Historique:
//    créé le 21/01/2017

class A {
      void m() asm("Multi 
      	   Line 
      	   String");   	 
}
