src/test/deca/context/invalid/decl_param_type_inconnu.deca
// Description:
//    Test de la déclaration d'un paramètre de type inconnu dans une méthode
//
// Résultats:
//    Ligne 11 : le type string n'existe pas! (Règle (0.2))
//
// Historique:
//    créé le 21/01/2017

class A {
  void helloWorld(string s) {
    println("Hello World !");
  }
}
